# sdk

./: .editorconfig  .gitignore  .prettierignore  .prettierrc.json  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  README.md  about.hbs  about.toml  bacon.toml  clippy.toml  go.work  package-lock.json  package.json  rustfmt.toml  scratch.md
crates/bitwarden/: CHANGELOG.md  Cargo.toml  README.md  test.sqlite  uniffi.toml
crates/bitwarden-api-api/: .openapi-generator-ignore  Cargo.toml  README.md
crates/bitwarden-api-api/.openapi-generator/: FILES
crates/bitwarden-api-api/src/: lib.rs
crates/bitwarden-api-api/src/apis/: access_policies_api.rs  accounts_api.rs  accounts_billing_api.rs  auth_requests_api.rs  ciphers_api.rs  collections_api.rs  config_api.rs  configuration.rs  counts_api.rs  devices_api.rs  emergency_access_api.rs  events_api.rs  folders_api.rs  groups_api.rs  hibp_api.rs  import_ciphers_api.rs  info_api.rs  installations_api.rs  licenses_api.rs  misc_api.rs  mod.rs  organization_auth_requests_api.rs  organization_billing_api.rs  organization_connections_api.rs  organization_domain_api.rs  organization_export_api.rs  organization_sponsorships_api.rs  plans_api.rs  (+25 more)
crates/bitwarden-api-identity/: .openapi-generator-ignore  Cargo.toml  README.md
crates/bitwarden-api-identity/.openapi-generator/: FILES
crates/bitwarden-api-identity/src/: lib.rs
crates/bitwarden-c/: Cargo.toml  Cross.toml
crates/bitwarden-c/src/: c.rs  lib.rs
crates/bitwarden-cli/: Cargo.toml  README.md
crates/bitwarden-cli/src/: color.rs  lib.rs
crates/bitwarden-core/: Cargo.toml  README.md  config.toml  uniffi.toml
crates/bitwarden-core/src/: android_support.rs  error.rs  lib.rs  uniffi_support.rs  util.rs
crates/bitwarden-core/tests/: register.rs
crates/bitwarden-crypto/: Cargo.toml  uniffi.toml
crates/bitwarden-crypto/benches/: allocator.rs  default_allocator.rs  new_encryptable.rs  zeroizing_allocator.rs
crates/bitwarden-crypto/src/: aes.rs  allocator.rs  decrypted.rs  enc_string.rs  encryptable.rs  error.rs  fingerprint.rs  key_encryptable.rs  lib.rs  master_key.rs  rsa.rs  shareable_key.rs  symmetric_crypto_key.rs  uniffi_support.rs  util.rs  wordlist.rs
crates/bitwarden-db/: Cargo.toml
crates/bitwarden-db-tests/: Cargo.toml  index.js  package-lock.json  package.json  webpack.config.js
crates/bitwarden-db-tests/src/: lib.rs
crates/bitwarden-db/src/: error.rs  lib.rs  migrator.rs  sqlite.rs
crates/bitwarden-error/: Cargo.toml
crates/bitwarden-error-macro/: Cargo.toml
crates/bitwarden-error-macro/src/: lib.rs
crates/bitwarden-error-macro/tests/: mod.rs
crates/bitwarden-error/src/: flat_error.rs  lib.rs
crates/bitwarden-exporters/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-exporters/resources/: json_export.json
crates/bitwarden-exporters/src/: client_exporter.rs  csv.rs  encrypted_json.rs  error.rs  export.rs  json.rs  lib.rs  models.rs
crates/bitwarden-fido/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-fido/src/: authenticator.rs  client.rs  client_fido.rs  crypto.rs  lib.rs  traits.rs  types.rs  uniffi_support.rs
crates/bitwarden-generators/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-generators/src/: client_generator.rs  error.rs  lib.rs  passphrase.rs  password.rs  username.rs  util.rs
crates/bitwarden-json/: Cargo.toml
crates/bitwarden-json/benches/: crypto_bench.rs
crates/bitwarden-json/src/: client.rs  command.rs  lib.rs  response.rs
crates/bitwarden-napi/: Cargo.toml  README.md  binding.d.ts  binding.js  package-lock.json  package.json  tsconfig.json
crates/bitwarden-napi/src/: client.rs  lib.rs
crates/bitwarden-napi/src-ts/: index.ts
crates/bitwarden-py/: Cargo.toml
crates/bitwarden-py/src/: client.rs  lib.rs  python_module.rs
crates/bitwarden-send/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-send/src/: client_sends.rs  error.rs  lib.rs  send.rs  uniffi_support.rs
crates/bitwarden-sm/: Cargo.toml
crates/bitwarden-sm/src/: client_generators.rs  client_projects.rs  client_secrets.rs  lib.rs
crates/bitwarden-uniffi/: Cargo.toml  README.md  build.rs  run.sh  uniffi.toml
crates/bitwarden-uniffi/android/: .gitignore  README.md  build-schemas.sh  build-sdk.sh
crates/bitwarden-uniffi/src/: android_support.rs  crypto.rs  docs.rs  error.rs  lib.rs  sdk.udl  uniffi_support.rs  vault.rs
crates/bitwarden-uniffi/swift/: build.sh
crates/bitwarden-vault/: Cargo.toml  README.md  uniffi.toml
crates/bitwarden-vault/src/: client_totp.rs  client_vault.rs  collection.rs  domain.rs  error.rs  exporters.rs  folder.rs  lib.rs  password_history.rs  sync.rs  totp.rs  uniffi_support.rs
crates/bitwarden-wasm/: Cargo.toml  README.md  build.sh
crates/bitwarden-wasm-internal/: Cargo.toml  README.md  build.rs  build.sh
crates/bitwarden-wasm-internal/src/: client.rs  crypto.rs  custom_types.rs  error.js  error.rs  lib.rs
crates/bitwarden-wasm/src/: async_issues_playground.rs  client.old.rs  client.rs  error.rs  lib.rs  log_level.rs  raw_client.rs  to_channel_wrapped.attempt.rs
crates/bitwarden/benches/: chunked_decryption.rs  crypto_bench.rs
crates/bitwarden/src/: android_support.rs  client.rs  crypto.rs  error.rs  lib.rs  uniffi_support.rs  util.rs  wordlist.rs
crates/bitwarden/tests/: register.rs  sync.rs  sync_fixture_response.json
crates/bw/: Cargo.toml  README.md
crates/bw/src/: config.rs  main.rs  render.rs
crates/bws/: .dockerignore  CHANGELOG.md  Cargo.toml  Cross.toml  Dockerfile  README.md  build.rs  entitlements.plist  install.ps1  install.sh
crates/bws/scripts/: install.ps1  install.sh
crates/bws/src/: cli.rs  config.rs  main.rs  render.rs  state.rs  util.rs
crates/memory-testing/: Cargo.toml  Dockerfile  Dockerfile.dockerignore  analyze_dumps.py  capture_dumps.py  cases.json  run_test.sh
crates/memory-testing/src/: lib.rs  main.rs
crates/sdk-schemas/: Cargo.toml
crates/sdk-schemas/src/: main.rs
crates/test-sync/: Cargo.toml
crates/test-sync/src/: main.rs
test-rustls-platform-verifier/: Cargo.toml
test-rustls-platform-verifier/src/: main.rs
(+1509 files in other folders)
