[workspace]
resolver = "2"
members = ["crates/*"]

# Global settings for all crates should be defined here
[workspace.package]
# Update using `cargo set-version -p bitwarden <new-version>`
version = "0.5.0"
authors = ["Bitwarden Inc"]
edition = "2021"
# Note: Changing rust-version should be considered a breaking change
rust-version = "1.71"
homepage = "https://bitwarden.com"
repository = "https://github.com/bitwarden/sdk"
license-file = "LICENSE"
keywords = ["bitwarden"]

# Define dependencies that are expected to be consistent across all crates
[workspace.dependencies]
bitwarden = { path = "crates/bitwarden", version = "=0.5.0" }
bitwarden-api-api = { path = "crates/bitwarden-api-api", version = "=0.5.0" }
bitwarden-api-identity = { path = "crates/bitwarden-api-identity", version = "=0.5.0" }
bitwarden-cli = { path = "crates/bitwarden-cli", version = "=0.5.0" }
bitwarden-crypto = { path = "crates/bitwarden-crypto", version = "=0.5.0" }
bitwarden-exporters = { path = "crates/bitwarden-exporters", version = "=0.5.0" }
bitwarden-generators = { path = "crates/bitwarden-generators", version = "=0.5.0" }

[workspace.lints.clippy]
unwrap_used = "deny"

# Compile all dependencies with some optimizations when building this crate on debug
# This slows down clean builds by about 50%, but the resulting binaries can be orders of magnitude faster
# As clean builds won't occur very often, this won't slow down the development process
[profile.dev.package."*"]
opt-level = 2

# Turn on a small amount of optimisation in development mode. This might interfere when trying to use a debugger
# if the compiler decides to optimize some code away, if that's the case, it can be set to 0 or commented out
[profile.dev]
opt-level = 1

# Turn on LTO on release mode
[profile.release]
lto = "fat"
codegen-units = 1
# Stripping the binary reduces the size by ~30%, but the stacktraces won't be usable anymore.
# This is fine as long as we don't have any unhandled panics, but let's keep it disabled for now
strip = true
