[package]
name = "test-rustls-platform-verifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
reqwest = { version = "0.12.5", features = [
    "rustls-tls-manual-roots",
], default-features = false }
rustls-platform-verifier = "0.3.3"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"] }
env_logger = "0.11.5"

[lints]
workspace = true
