[package]
name = "bitwarden-api-api"
version = "0.2.2"
authors = ["Bitwarden Inc"]
license-file = "LICENSE"
repository = "https://github.com/bitwarden/sdk"
homepage = "https://bitwarden.com"
description = """
Api bindings for the Bitwarden API.
"""
keywords = ["bitwarden"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
serde = "^1.0.163"
serde_derive = "^1.0.163"
serde_json = "^1.0.96"
serde_repr = "^0.1.17"
url = "^2.3.1"
uuid = { version = "^1.3.3", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11.18"
features = ["json", "multipart"]

[dev-dependencies]
