[package]
name = "bitwarden-api-api"
version = "0.2.3"
authors = ["Bitwarden Inc"]
license-file = "LICENSE"
repository = "https://github.com/bitwarden/sdk"
homepage = "https://bitwarden.com"
description = """
Api bindings for the Bitwarden API.
"""
keywords = ["bitwarden"]
categories = ["api-bindings"]
edition = "2018"

[dependencies]
serde = ">=1.0.163, <2"
serde_derive = ">=1.0.163, <2"
serde_json = ">=1.0.96, <2"
serde_repr = ">=0.1.12, <0.2"
url = ">=2.3.1, <3"
uuid = { version = ">=1.3.3, <2", features = ["serde"] }
[dependencies.reqwest]
version = ">=0.11.18, <0.12"
features = ["json", "multipart"]
default-features = false

[dev-dependencies]
