[package]
name = "bitwarden-api-api"
description = """
Api bindings for the Bitwarden API.
"""
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
serde = ">=1.0.163, <2"
serde_derive = ">=1.0.163, <2"
serde_json = ">=1.0.96, <2"
serde_repr = ">=0.1.12, <0.2"
url = ">=2.3.1, <3"
uuid = { version = ">=1.3.3, <2", features = ["serde"] }
[dependencies.reqwest]
version = ">=0.11.18, <0.12"
features = ["json", "multipart"]
default-features = false

[dev-dependencies]
