[package]
name = "bitwarden-api-identity"
description = "Api bindings for the Bitwarden Identity API."
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
serde = { version = ">=1.0.163, <2", features = ["derive"] }
serde_with = { version = ">=3.8, <4", default-features = false, features = ["base64", "std", "macros"] }
serde_json = ">=1.0.96, <2"
serde_repr = ">=0.1.12, <0.2"
url = ">=2.5, <3"
uuid = { version = ">=1.3.3, <2", features = ["serde", "v4"] }
reqwest = { version = ">=0.12.5, <0.13", features = ["json", "multipart", "http2"], default-features = false }
