[package]
name = "bitwarden-api-identity"
description = "Api bindings for the Bitwarden Identity API."
categories = ["api-bindings"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
serde = { workspace = true }
serde_with = { version = ">=3.8, <4", default-features = false, features = [
    "base64",
    "std",
    "macros",
] }
serde_json = { workspace = true }
serde_repr = { workspace = true }
url = ">=2.5, <3"
uuid = { workspace = true }
reqwest = { workspace = true }
