[package]
name = "bitwarden-c"
version = "0.1.0"
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
bench = false

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
tokio = { version = ">=1.28.2, <2.0", features = ["rt-multi-thread", "macros"] }

bitwarden-json = { path = "../bitwarden-json", features = ["secrets"] }

[dependencies]
env_logger = ">=0.10.0, <0.12"

[lints]
workspace = true
