[package]
name = "bitwarden-cli"
description = """
Internal crate for the bws crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
color-eyre = "0.6"
inquire = "0.6.2"
supports-color = "3.0.0"

[lints]
workspace = true
