[package]
name = "bitwarden-core"
description = """
Internal crate for the bitwarden crate. Do not use.
"""
keywords = ["bitwarden"]

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
internal = [] # Internal testing methods
no-memory-hardening = [
    "bitwarden-crypto/no-memory-hardening",
] # Disable memory hardening features
uniffi = [
    "bitwarden-crypto/uniffi",
    "dep:uniffi",
    "dep:passkey",
    "dep:coset",
    "dep:p256",
] # Uniffi bindings
secrets = [] # Secrets manager API
state = ["dep:bitwarden-db", "dep:tokio"] # Persistent state

[dependencies]
async-trait = ">=0.1.80, <0.2"
base64 = ">=0.22.1, <0.23"
bitwarden-api-api = { workspace = true }
bitwarden-api-identity = { workspace = true }
bitwarden-crypto = { workspace = true }
bitwarden-db = { workspace = true, optional = true }
chrono = { version = ">=0.4.26, <0.5", features = [
    "clock",
    "serde",
    "std",
], default-features = false }
coset = { version = "0.3.7", optional = true }
# We don't use this directly (it's used by rand), but we need it here to enable WASM support
getrandom = { version = ">=0.2.9, <0.3", features = ["js"] }
hmac = ">=0.12.1, <0.13"
log = ">=0.4.18, <0.5"
p256 = { version = ">=0.13.2, <0.14", optional = true }
passkey = { git = "https://github.com/bitwarden/passkey-rs", rev = "ae08e2cb7dd3d44d915caed395c0cdc56b50fa27", optional = true }
rand = ">=0.8.5, <0.9"
reqwest = { version = ">=0.12.5, <0.13", features = [
    "http2",
    "json",
], default-features = false }
schemars = { version = ">=0.8.9, <0.9", features = ["uuid1", "chrono"] }
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0.96, <2.0"
serde_qs = ">=0.12.0, <0.14"
serde_repr = ">=0.1.12, <0.2"
sha1 = ">=0.10.5, <0.11"
sha2 = ">=0.10.6, <0.11"
thiserror = ">=1.0.40, <2.0"
tokio = { workspace = true, optional = true }
uniffi = { version = "=0.28.1", optional = true, features = ["tokio"] }
uuid = { version = ">=1.3.3, <2.0", features = ["serde"] }
validator = { version = "0.18.1", features = ["derive"] }
zeroize = { version = ">=1.7.0, <2.0", features = ["derive", "aarch64"] }
zxcvbn = ">=3.0.1, <4.0"

[target.'cfg(all(not(target_arch="wasm32"), not(windows)))'.dependencies]
# By default, we use rustls as the TLS stack and rust-platform-verifier to support user-installed root certificates
# The only exception is WASM, as it just uses the browsers/node fetch
reqwest = { version = ">=0.12.5, <0.13", features = [
    "rustls-tls-manual-roots",
], default-features = false }
rustls-platform-verifier = "0.3.3"

[target.'cfg(windows)'.dependencies]
# We are having issues with rustls-platform-verifier on Windows GitHub runners
reqwest = { version = ">=0.12.5, <0.13", features = [
    "rustls-tls-native-roots",
], default-features = false }

[dev-dependencies]
rand_chacha = "0.3.1"
tokio = { workspace = true }
wiremock = "0.6.0"
zeroize = { version = ">=1.7.0, <2.0", features = ["derive", "aarch64"] }

[lints]
workspace = true
