[package]
name = "bitwarden-crypto"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true

[features]
default = []

mobile = ["dep:uniffi"] # Mobile-specific features

[dependencies]
aes = { version = "0.9.0-pre", features = ["zeroize"] }
argon2 = { version = "0.6.0-pre.0", features = [
    "std",
    "zeroize",
], default-features = false }
base64 = ">=0.21.2, <0.22"
blake2 = { version = "0.11.0-pre.3", features = ["zeroize"] }
cbc = { version = "0.2.0-pre", features = [
    "alloc",
    "zeroize",
], git = "https://github.com/RustCrypto/block-modes", rev = "532a46166bcc74bf718ca351cc3b5a86a2fcb2a3" }
hkdf = "0.13.0-pre.3"
hmac = "0.13.0-pre.3"
hybrid-array = { version = "0.2.0-rc.8", features = ["zeroize"] }
num-bigint = ">=0.4, <0.5"
num-traits = ">=0.2.15, <0.3"
pbkdf2 = { version = "0.13.0-pre.0", default-features = false }
rand = ">=0.8.5, <0.9"
rayon = ">=1.8.1, <2.0"
rsa = "0.10.0-pre.1"
schemars = { version = ">=0.8, <0.9", features = ["uuid1"] }
serde = { version = ">=1.0, <2.0", features = ["derive"] }
sha1 = { version = "0.11.0-pre.3", features = ["zeroize"] }
sha2 = { version = "0.11.0-pre.3", features = ["zeroize"] }
subtle = ">=2.5.0, <3.0"
thiserror = ">=1.0.40, <2.0"
uniffi = { version = "=0.26.1", optional = true }
uuid = { version = ">=1.3.3, <2.0", features = ["serde"] }
zeroize = { version = ">=1.7.0, <2.0", features = ["derive", "aarch64"] }

[dev-dependencies]
rand_chacha = "0.3.1"
serde_json = ">=1.0.96, <2.0"

[lints]
workspace = true
