[package]
name = "bitwarden-db"
description = """
Internal crate for the bitwarden crate. Do not use.
"""

version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
log = ">=0.4.18, <0.5"
thiserror = ">=1.0.40, <2.0"
uuid = { version = ">=1.3.3, <2.0" }
tokio = { workspace = true }

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
rusqlite = { version = ">=0.31.0, <0.32", features = ["uuid"] }

[target.'cfg(target_arch="wasm32")'.dependencies]
js-sys = "0.3.68"
wasm-bindgen = "0.2.91"
wasm-bindgen-futures = "0.4.41"
