[package]
name = "bitwarden-json"
version = "0.3.0"
description = """
JSON bindings for the Bitwarden Secret Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]
categories = ["api-bindings"]
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
internal = ["bitwarden/internal"] # Internal testing methods
secrets = ["bitwarden/secrets"]   # Secrets manager API

[dependencies]
bitwarden = { workspace = true }
log = ">=0.4.18, <0.5"
schemars = ">=0.8.12, <0.9"
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0.96, <2.0"
uuid = { version = ">=1.3.3, <2", features = ["serde", "v4"] }


[lints]
workspace = true
