[package]
name = "bitwarden-json"
version = "0.3.0"
description = """
JSON bindings for the Bitwarden Secret Manager SDK
"""
keywords = ["bitwarden", "secrets-manager"]
categories = ["api-bindings"]
publish = false

authors.workspace = true
edition.workspace = true
rust-version.workspace = true
homepage.workspace = true
repository.workspace = true
license-file.workspace = true

[features]
secrets = ["bitwarden/secrets"] # Secrets manager API

[dependencies]
bitwarden = { workspace = true }
log = ">=0.4.18, <0.5"
schemars = { workspace = true }
serde = { version = ">=1.0, <2.0", features = ["derive"] }
serde_json = ">=1.0.96, <2.0"

[target.'cfg(debug_assertions)'.dependencies]
tokio = { version = "1.36.0", features = ["time"] }

[lints]
workspace = true
